Massive spacing uphaul, added Nav to every page for mobile and hid ugly links on mobile, made all main content text one class, fixed some mobile spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,11 @@ hr {
   display: flex;
 }
 
-#marketingText{
+.mainText{
   width:80%;
 }
 
-#subPageHeader{
+.subPageLinks{
   display: none;
 }
 
